Force ui components to working version

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "deep-equal": "^1.0.1",
     "react-native-data-table": "https://github.com/martsie/react-native-data-table",
-    "react-native-ui-components": "^0.4.2"
+    "react-native-ui-components": "https://github.com/martsie/react-native-ui-components"
   },
   "devDependencies": {
     "babel-core": "^6.17.0",
